<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Öster</string>
    <string name="app_descr"><b>Einfache App für die Wiederholung</b></string>
    <string name="app_message">Result of test here</string>
    <string name="app_bullet_filled">\u25CF</string>
    <string name="app_bullet_empty">\u25CB</string>

    <string name="facebook_app_id">679515238906605</string>
    <string name="fb_login_protocol_scheme">fb679515238906605</string>

    <!-- Strings related to preferences -->
    <string name="display_name"><xliff:g id="preferance_key">display_name</xliff:g></string>
    <string name="contact_email"><xliff:g id="preferance_key">contact_email</xliff:g></string>
    <string name="user_photo"><xliff:g id="preferance_key">user_photo</xliff:g></string>
    <string name="email_switcher"><xliff:g id="preferance_key">email_switcher</xliff:g></string>
    <string name="nouns_plural"><xliff:g id="preferance_key">nouns_plural</xliff:g></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Suche</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_nouns">Nomen</string>
    <string name="title_activity_nouns_all">Alle Nomen</string>
    <string name="title_activity_nouns_a1">Nomen A1</string>
    <string name="title_activity_nouns_a2">Nomen A2</string>
    <string name="title_activity_nouns_b1">Nomen B1</string>
    <string name="title_activity_nouns_b2">Nomen B2</string>
    <string name="title_activity_verbs">Verben</string>
    <string name="title_activity_verbs_all">Alle Verben</string>
    <string name="title_activity_grammatik">Grammatik</string>

    <string name="btn_ok">OK</string>
    <string name="btn_next">Nächster</string>

    <!-- Strings related to nouns content -->
    <string name="ger_nominativ">Der/Die/Das</string>
    <string name="ger_akusativ">Einen/Eine/Ein</string>
    <string name="ger_dativ">Dem/Der/Dem/Den</string>
    <string name="ger_none">Kein</string>
    <string name="ger_word">SuperDifficultGermanWord</string>
    <string name="ger_translate">Übersetzen</string>

    <!-- Strings related to verbs content -->
    <string name="ger_present">Präsens</string>
    <string name="ger_past">Präteritum</string>
    <string name="ger_perfect">Perfekt</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_auth_failed">Oops, something is wrong with login.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_logout">Log out</string>
    <string name="action_facebook">FACEBOOK</string>
    <string name="action_google">GOOGLE</string>
    <string name="action_reset_pass">Reset password</string>

    <!-- Strings related to Settings -->
    <!-- General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable contact via e-mail</string>
    <string name="pref_description_social_recommendations">This will activate button for direct e-mail send to the owner of App. It is recommended to fill e-mail field, thus developer can respond</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">User Name</string>
    <string name="pref_title_email">My contact e-mail</string>
    <string name="pref_default_email">my.email@contact.web</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync (in development)</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Test generation</string>
    <string name="pref_title_include_plural">Include plural in noun tests</string>
</resources>
