<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ripka.deutschwiederholung.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/site_bg" />

    <TextView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:text="@string/app_descr"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:id="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <RadioButton
        android:text="@string/ger_nominativ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton"
        android:layout_below="@+id/radioGroup"/>

    <RadioButton
        android:text="@string/ger_akusativ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioButton"
        android:layout_marginTop="10dp"
        android:id="@+id/radioButton2"
        android:layout_alignLeft="@+id/radioButton" />
    <RadioButton
        android:text="@string/ger_dativ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioButton2"
        android:layout_alignLeft="@+id/radioButton"
        android:layout_marginTop="10dp"
        android:id="@+id/radioButton3" />
    <RadioButton
        android:text="@string/ger_none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioButton3"
        android:layout_alignLeft="@+id/radioButton"
        android:layout_marginTop="10dp"
        android:id="@+id/radioButton4" />
    </RadioGroup>

    <TextView
        android:id="@+id/word_of_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/ger_word"/>
    <TextView
        android:id="@+id/word_translate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:visibility="invisible"
        android:text="@string/ger_translate"/>
    <CheckBox
        android:text="@string/ger_translate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/message"
        android:id="@+id/checkBox"
        android:onClick="onCheckedChanged"/>
    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_above="@+id/app_btn_go"
        android:layout_marginBottom="30dp"
        android:text="@string/app_message"/>
    <Button
        android:id="@+id/app_btn_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_ok"
        android:onClick="checkTest"/>
    <Button
        android:id="@+id/app_btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_next"
        android:onClick="nextTest"
        android:visibility="invisible"
        style="@style/Widget.AppCompat.Button.Borderless.Colored" />
</RelativeLayout>
