<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/word_of_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/ger_word"/>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true" >

        <TextView
            android:id="@+id/word_translate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/ger_translate" />

        <CheckBox
            android:text="@string/ger_translate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox"
            android:onClick="onCheckedChanged"
            android:layout_marginTop="120dp"
            android:layout_alignLeft="@+id/word_translate" />
    </FrameLayout>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/message"
        android:id="@+id/radioGroup">
        <ToggleButton
            android:text="@string/ger_nominativ"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/centerPoint"
            android:textAllCaps="false"
            android:id="@+id/radioButton" />
        <ToggleButton
            android:text="@string/ger_akusativ"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/centerPoint"
            android:textAllCaps="false"
            android:id="@+id/radioButton2" />

        <ToggleButton
            android:text="@string/ger_dativ"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/centerPoint"
            android:textAllCaps="false"
            android:layout_below="@+id/radioButton2"
            android:id="@+id/radioButton3" />
        <ToggleButton
            android:text="@string/ger_none"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/centerPoint"
            android:textAllCaps="false"
            android:layout_below="@+id/radioButton2"
            android:id="@+id/radioButton4" />
        <TextView
            android:id="@+id/centerPoint"
            android:text=""
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:visibility="invisible"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_above="@+id/app_btn_go"
        android:layout_marginBottom="10dp"
        android:text="@string/app_message"
        android:textColor="@color/colorMessageText"/>

    <Button
        android:id="@+id/app_btn_go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_ok"
        android:onClick="checkTest"
        android:background="@color/colorOK"
        android:textColor="@color/colorWhite"/>
    <Button
        android:id="@+id/app_btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_next"
        android:onClick="nextTest"
        android:visibility="invisible"
        android:background="@color/colorOK"
        android:textColor="@color/colorWhite"
        style="@style/Widget.AppCompat.Button.Colored" />

</RelativeLayout>
