<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true">

        <TextView
            android:id="@+id/verbs_infinitive"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textSize="20dp"
            android:text="@string/ger_word"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="70dp"
                android:layout_weight="1"
                android:text="@string/ger_present"/>
            <EditText
                android:id="@+id/verbs_present"
                android:layout_height="wrap_content"
                android:layout_width="200dp"
                android:layout_weight="1"
                android:editable="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_marginTop="70dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="70dp"
                android:layout_weight="1"
                android:text="@string/ger_past"/>
            <EditText
                android:id="@+id/verbs_past"
                android:layout_height="wrap_content"
                android:layout_width="200dp"
                android:layout_weight="1"
                android:editable="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_marginTop="110dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="70dp"
                android:layout_weight="1"
                android:text="@string/ger_perfect"/>
            <EditText
                android:id="@+id/verbs_perfect"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="200dp"
                android:inputType="text|textNoSuggestions"
                android:singleLine="true"
                android:imeOptions="actionDone"/>
        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/block_translate"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_above="@+id/verbs_message"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/verbs_translate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ger_translate"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1000000"/>
        <CheckBox
            android:id="@+id/verbs_translate_check"
            android:text="@string/ger_translate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onCheckedChanged"/>
    </LinearLayout>

    <TextView
        android:id="@+id/verbs_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:visibility="invisible"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_above="@+id/verbs_btn_go"
        android:layout_marginBottom="10dp"
        android:text="@string/app_message"
        android:textColor="@color/colorMessageText"/>
    <Button
        android:id="@+id/verbs_btn_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_ok"
        android:onClick="checkTest"/>
    <Button
        android:id="@+id/verbs_btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_next"
        android:onClick="nextTest"
        android:visibility="invisible"
        style="@style/Widget.AppCompat.Button.Colored" />

</RelativeLayout>
