<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ripka.deutschwiederholung.LoginActivity">

    <!-- Login progress -->
    <FrameLayout
        android:id="@+id/login_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <FrameLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingBottom="50dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingBottom="20dp"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_launcher" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextHint">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextHint">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingTop="25dp"
                        android:textColor="@color/colorWhite" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="0dp">

                    <Button
                        android:id="@+id/reset_pass_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="sans-serif-light"
                        android:onClick="resetPasswordClick"
                        android:text="@string/action_reset_pass"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="30dp">

                    <Button
                        android:id="@+id/email_sign_in_button"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/btn_round"
                        android:fontFamily="sans-serif-light"
                        android:onClick="emailLoginClick"
                        android:text="@string/btn_ok"
                        android:textColor="@color/colorWhite"
                        android:textSize="23sp" />
                </LinearLayout>

            </LinearLayout>
        </FrameLayout>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/login_progress"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="16dp"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/newReportButton"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_launcher"
            app:fabSize="normal" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_social"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/facebook_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/centerPoint"
            android:layout_toStartOf="@+id/centerPoint"
            android:background="@drawable/btn_rounded"
            android:drawableLeft="@drawable/ic_action_facebook"
            android:drawableStart="@drawable/ic_action_facebook"
            android:drawableTint="@color/colorWhite"
            android:onClick="facebookClick"
            android:paddingEnd="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:paddingStart="10dp"
            android:text="@string/action_facebook"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <Button
            android:id="@+id/google_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@+id/centerPoint"
            android:layout_toRightOf="@+id/centerPoint"
            android:background="@drawable/btn_rounded"
            android:drawableLeft="@drawable/ic_action_google"
            android:drawableStart="@drawable/ic_action_google"
            android:drawableTint="@color/colorWhite"
            android:onClick="googleClick"
            android:paddingEnd="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="30dp"
            android:paddingStart="10dp"
            android:text="@string/action_google"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/centerPoint"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="" />
    </RelativeLayout>
</RelativeLayout>
